[gd_scene load_steps=10 format=3 uid="uid://caee8rf0tuxe4"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_4d350"]
[ext_resource type="Texture2D" uid="uid://cj17opkk11mtv" path="res://Assets/valid/Logos/background.png" id="1_ey8mj"]
[ext_resource type="PackedScene" uid="uid://dys15tnkq8gnu" path="res://Scenes/background.tscn" id="1_labvj"]
[ext_resource type="Texture2D" uid="uid://dox2fl460gv13" path="res://ui elements.png" id="3_mlnsk"]
[ext_resource type="Theme" uid="uid://c0q0w54400a2w" path="res://resources/theme.tres" id="5_bnqp7"]
[ext_resource type="AudioStream" uid="uid://brx6rjti6dhpc" path="res://Assets/audio/main menu.wav" id="6_d5emt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_72cfa"]
atlas = ExtResource("3_mlnsk")
region = Rect2(4, 3, 98, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w8b2"]
atlas = ExtResource("3_mlnsk")
region = Rect2(6, 34, 47, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_d01wb"]
atlas = ExtResource("3_mlnsk")
region = Rect2(7, 58, 47, 14)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4d350")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
metadata/_edit_lock_ = true

[node name="Background2" parent="." instance=ExtResource("1_labvj")]

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1)
texture = ExtResource("1_ey8mj")
metadata/_edit_lock_ = true

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(0, -71)
texture = SubResource("AtlasTexture_72cfa")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -26.0
offset_right = 41.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2

[node name="startbutton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_6w8b2")
texture_hover = SubResource("AtlasTexture_d01wb")

[node name="howToPlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_bnqp7")
text = "How to play"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_bnqp7")
text = "Credits"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_d5emt")
autoplay = true

[connection signal="pressed" from="VBoxContainer/startbutton" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/howToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
